--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
         -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.10.2</version>
+        </dependency>
     </dependencies>
     <properties>
         <jersey.version>3.1.1</jersey.version>
