--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
     </dependencyManagement>
 
     <dependencies>
+    <dependency>
+        <groupId>org.glassfish.jersey.containers</groupId>
+        <artifactId>jersey-container-grizzly2-http</artifactId>
+        <version>3.1.1</version> <!-- Use the latest version compatible with your project -->
+    </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet-core</artifactId>
